Getafix cache policy (#4)
* build pass

* update popularity in mysql

* periodic sql

* fix tests

* cache eviction policy

* typesafe

* revert using map in segment collector

* byte array as map key

* add eviction count

* match default behavior